# financial_tracker

./: .gitignore  README.md  app.py.example  pyproject.toml
financial_tracker/: __init__.py  data_processor.py  data_reader.py  utils.py  visualizer.py
financial_tracker/assets/: dark_theme.css
